--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="sl">
 <head>
   <meta charset="UTF-8" />
-  <title>Jabolčni Zlom</title>
+  <title>Štrudl Bricks</title>
+  <link rel="icon" type="image/x-icon" href="/images/green_apple.png">
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <div class="main">
-    <h1>The Bricks</h1>
+    <h1>Strudl Bricks</h1>
 
-    <!-- Platno -->
     <canvas id="canvas" width="800" height="500"></canvas>
 
-    <!-- Gumbi -->
     <div class="controls">
       <button id="startBtn">Začni igro</button>
       <button id="pauseBtn">Pavza</button>
@@ -26,7 +25,6 @@
       </select>
     </div>
 
-    <!-- Rezultati -->
     <p>Točke: <span id="score">0</span></p>
     <p>Najboljši rezultat: <span id="highScore">0</span></p>
   </div>
