--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <option value="2" selected>Srednje</option>
         <option value="3">Težko</option>
       </select>
+
+      <button id="infoBtn">Vizitka</button>
     </div>
 
     <div class="scoreboard">
@@ -34,7 +36,6 @@
     </div>
   </div>
 
-  <!-- Glavna skripta -->
   <script src="game.js"></script>
 </body>
 </html>
